feature: update-AVLTree